--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,14 +10,14 @@ jobs:
           fingerprints:
             - "f3:e1:24:7a:b9:2e:61:73:23:e3:fa:f6:76:b2:a3:8f"
       - checkout
-      - run:
-          name: Setup VirtualEnv
-          command: |
-            echo 'export TAG=0.1.${CIRCLE_BUILD_NUM}' >> $BASH_ENV
-            echo 'export IMAGE_NAME=python-circleci-docker' >> $BASH_ENV
-            virtualenv helloworld
-            . helloworld/bin/activate
-            pip install --no-cache-dir -r requirements.txt
+      #- run:
+      #    name: Setup VirtualEnv
+      #    command: |
+      #      echo 'export TAG=0.1.${CIRCLE_BUILD_NUM}' >> $BASH_ENV
+      #      echo 'export IMAGE_NAME=python-circleci-docker' >> $BASH_ENV
+      #      virtualenv helloworld
+      #      . helloworld/bin/activate
+      #      pip install --no-cache-dir -r requirements.txt
       - run:
           name: Add Target Node to known hosts
           command: |
