--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,23 +10,21 @@ jobs:
           fingerprints:
             - "f3:e1:24:7a:b9:2e:61:73:23:e3:fa:f6:76:b2:a3:8f"
       - checkout
-      #- run:
-      #    name: Setup VirtualEnv
-      #    command: |
-      #      echo 'export TAG=0.1.${CIRCLE_BUILD_NUM}' >> $BASH_ENV
-      #      echo 'export IMAGE_NAME=python-circleci-docker' >> $BASH_ENV
-      #      virtualenv helloworld
-      #      . helloworld/bin/activate
-      #      pip install --no-cache-dir -r requirements.txt
+      - run:
+          name: Setup VirtualEnv
+          command: |
+            virtualenv test_app
+            . test_app/bin/activate
+            pip install --no-cache-dir -r requirements.txt
       - run:
           name: Add Target Node to known hosts
           command: |
             sudo ssh-keyscan -H $SSH_HOST >> ~/.ssh/known_hosts
-      #- run:
-      #    name: Run Tests
-      #    command: |
-      #      . helloworld/bin/activate
-      #      python hello_world_test.py
+      - run:
+          name: Run Tests
+          command: |
+            . test_app/bin/activate
+            python hello_world_test.py
       - run:
           name: Transfer Files to Server via SCP
           command: |
